--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,9 +1,13 @@
 header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     width: 100%
 }
 
 header h1 {
     width: 25%;
+    display: flex;
 }
 
 header button {
